connected to room

--- a/src/LoginPage/LoginForm.module.css
+++ b/src/LoginPage/LoginForm.module.css
@@ -24,7 +24,7 @@
 .mediaIcons {
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .mediaIcons a svg {
