--- a/src/sessionPage/toolbar/Tollbar.module.css
+++ b/src/sessionPage/toolbar/Tollbar.module.css
@@ -3,9 +3,13 @@
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
+    background-color: rgb(0 0 0 / 50%);
+    border-radius: 10px;
 }
 
 .toolbar li {
+    padding: 0px 10px;
     list-style: none;
 }
 
