--- a/src/sessionPage/videoLayout/VideoLayout.module.css
+++ b/src/sessionPage/videoLayout/VideoLayout.module.css
@@ -18,3 +18,8 @@ div[id^="con_"] {
     justify-items: center;
     align-items: center;
 }
+
+.cons-div {
+    height: 100% !important;
+    width: 100% !important;
+}
